typescript/checker/tests/conformance/es6/templates/taggedTemplateStringsWithManyCallAndMemberExpressions.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            222,
        ),
        hi: BytePos(
            223,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/taggedTemplateStringsWithManyCallAndMemberExpressions.ts:11:5
   |
11 | var f: I;
   |     ^

